k8s/main-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main-api
  labels:
    app: main-api
