k8s/main-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-api
spec:
  selector:
    app: main-api
  ports:
    - port: 80
      targetPort: 5000
